<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		home
	 *	@date 		Friday 09th of June 2023 08:29:38 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/home" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_home_ek1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__home_ek2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__home_ek2_shape" />


				<RelativeLayout
					android:id="@+id/group_3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="15dp"
					android:layout_marginTop="88dp">

					<View
						android:id="@+id/rectangle_2"
						android:layout_width="331dp"
						android:layout_height="44dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_2_shape" />

					<ImageView
						android:id="@+id/search"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_marginStart="14dp"
						android:layout_marginTop="9dp"
						android:contentDescription="search"
						android:src="@drawable/search" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_30"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp">


					<RelativeLayout
						android:id="@+id/group_1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">

						<View
							android:id="@+id/rectangle_1"
							android:layout_width="360dp"
							android:layout_height="75dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_1_shape" />

						<TextView
							android:id="@+id/beranda"
							android:layout_width="131dp"
							android:layout_height="50dp"
							android:layout_marginLeft="46dp"
							android:layout_marginTop="34dp"
							android:text="@string/beranda_string"
							android:textColor="@color/rectangle_2_color"
							android:textSize="24sp"
							android:textStyle="bold" />

					</RelativeLayout>

					<ImageView
						android:id="@+id/history"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_marginStart="314dp"
						android:layout_marginTop="37dp"
						android:contentDescription="history"
						android:src="@drawable/history" />

					<ImageView
						android:id="@+id/arrow_forward"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_marginStart="15dp"
						android:layout_marginTop="37dp"
						android:contentDescription="arrow_forward"
						android:src="@drawable/arrow_forward" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="20dp"
					android:layout_marginTop="150dp">


					<RelativeLayout
						android:id="@+id/group_6"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">

						<View
							android:id="@+id/rectangle_1_ek1"
							android:layout_width="150dp"
							android:layout_height="150dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_1_ek1_shape" />

					</RelativeLayout>

					<TextView
						android:id="@+id/cek_leukokoria"
						android:layout_width="154dp"
						android:layout_height="38dp"
						android:layout_gravity="center_horizontal|center"
						android:layout_marginLeft="2dp"
						android:layout_marginTop="160dp"
						android:gravity="center"
						android:text="@string/cek_leukokoria_string"
						android:textColor="@color/cek_leukokoria_color"
						android:textSize="18sp"
						android:textStyle="bold" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_32"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="20dp"
					android:layout_marginTop="360dp">


					<RelativeLayout
						android:id="@+id/group_6_ek1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">

						<View
							android:id="@+id/rectangle_1_ek2"
							android:layout_width="150dp"
							android:layout_height="150dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/rectangle_1_ek2_shape" />

						<TextView
							android:id="@+id/klinik_mata_terdekat"
							android:layout_width="117dp"
							android:layout_height="63dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="21dp"
							android:layout_marginTop="160dp"
							android:gravity="center"
							android:text="@string/klinik_mata_terdekat_string"
							android:textColor="@color/cek_leukokoria_color"
							android:textSize="18sp"
							android:textStyle="bold" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_16"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="584dp">

					<View
						android:id="@+id/rectangle_5"
						android:layout_width="360dp"
						android:layout_height="56dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_5_shape" />


					<RelativeLayout
						android:id="@+id/group_15"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="46dp"
						android:layout_marginTop="8dp">


						<RelativeLayout
							android:id="@+id/group_14"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="234dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/article"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:layout_marginStart="2dp"
								android:layout_marginTop="0dp"
								android:contentDescription="article"
								android:src="@drawable/article" />

							<TextView
								android:id="@+id/riwayat"
								android:layout_width="46dp"
								android:layout_height="17dp"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="30dp"
								android:text="@string/riwayat_string"
								android:textColor="@color/cek_leukokoria_color"
								android:textStyle="bold" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/group_13"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="158dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/mail"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="mail"
								android:src="@drawable/mail" />

							<TextView
								android:id="@+id/pesan"
								android:layout_width="37dp"
								android:layout_height="17dp"
								android:layout_marginLeft="3dp"
								android:layout_marginTop="30dp"
								android:text="@string/pesan_string"
								android:textColor="@color/cek_leukokoria_color"
								android:textStyle="bold" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/group_11"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="80dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/group"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="group"
								android:src="@drawable/group" />

							<TextView
								android:id="@+id/akun"
								android:layout_width="30dp"
								android:layout_height="17dp"
								android:layout_gravity="center_horizontal|center"
								android:layout_marginLeft="4dp"
								android:layout_marginTop="30dp"
								android:gravity="center"
								android:text="@string/akun_string"
								android:textColor="@color/cek_leukokoria_color"
								android:textStyle="bold" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/group_10"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/home_ek3"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:layout_marginStart="2dp"
								android:layout_marginTop="0dp"
								android:contentDescription="home_ek3"
								android:src="@drawable/home_ek3" />

							<TextView
								android:id="@+id/beranda_ek1"
								android:layout_width="47dp"
								android:layout_height="17dp"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="30dp"
								android:text="@string/beranda_ek1_string"
								android:textColor="@color/cek_leukokoria_color"
								android:textStyle="bold" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>
			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>