<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		info
	 *	@date 		Friday 09th of June 2023 09:24:46 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/info" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_info_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__info_ek2"
					android:background="@drawable/_bg__info_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/group_30"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_1"
							android:background="@drawable/rectangle_1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="360dp"
							android:layout_height="75dp" />

						<TextView android:id="@+id/informasi"
							android:textStyle="bold"
							android:textSize="24sp"
							android:textColor="@color/white"
							android:layout_marginLeft="46dp"
							android:layout_marginTop="34dp"
							android:layout_width="146dp"
							android:layout_height="50dp"
							android:text="@string/informasi_string"
							 />

					</RelativeLayout>

					<ImageView android:id="@+id/history"
						android:src="@drawable/history"
						android:contentDescription="history"
						 android:layout_marginStart="314dp"
						android:layout_marginTop="37dp"
						android:layout_width="30dp"
						android:layout_height="30dp" />

					<ImageView android:id="@+id/arrow_forward"
						android:src="@drawable/arrow_forward"
						android:contentDescription="arrow_forward"
						 android:layout_marginStart="15dp"
						android:layout_marginTop="37dp"
						android:layout_width="30dp"
						android:layout_height="30dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_32"
					android:layout_marginTop="125dp"
					android:layout_marginStart="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/frame_1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_25"
							android:background="@drawable/rectangle_25_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="350dp"
							android:layout_height="120dp" />


						<RelativeLayout android:id="@+id/group_24"
							android:layout_marginTop="6dp"
							android:layout_marginStart="5dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>


							<RelativeLayout android:id="@+id/group_19"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/group_17"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<ImageView android:id="@+id/ellipse_1"
										android:src="@drawable/ellipse_1"
										android:contentDescription="ellipse_1"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:layout_width="90dp"
										android:layout_height="90dp" />

								</RelativeLayout>

								<TextView android:id="@+id/leukokoria"
									android:layout_gravity="center_horizontal|center"
									android:gravity="center"
									android:textSize="14sp"
									android:textColor="@color/leukokoria_color"
									android:layout_marginLeft="7dp"
									android:layout_marginTop="97dp"
									android:layout_width="84dp"
									android:layout_height="27dp"
									android:text="@string/leukokoria_string"
									 />

							</RelativeLayout>


							<RelativeLayout android:id="@+id/group_20"
								android:layout_marginTop="0dp"
								android:layout_marginStart="100dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/group_17_ek1"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<View   android:id="@+id/ellipse_1_ek1"
										android:background="@drawable/ellipse_1_ek1_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:layout_width="92dp"
										android:layout_height="92dp" />

								</RelativeLayout>

								<View   android:id="@+id/rectangle_9"
									android:background="@drawable/rectangle_9_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="100dp"
									android:layout_width="90dp"
									android:layout_height="11dp" />

							</RelativeLayout>


							<RelativeLayout android:id="@+id/group_21"
								android:layout_marginTop="0dp"
								android:layout_marginStart="200dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/group_17_ek2"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<View   android:id="@+id/ellipse_1_ek2"
										android:background="@drawable/ellipse_1_ek2_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:layout_width="92dp"
										android:layout_height="92dp" />

								</RelativeLayout>

								<View   android:id="@+id/rectangle_9_ek1"
									android:background="@drawable/rectangle_9_ek1_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="100dp"
									android:layout_width="90dp"
									android:layout_height="11dp" />

							</RelativeLayout>


							<RelativeLayout android:id="@+id/group_22"
								android:layout_marginTop="0dp"
								android:layout_marginStart="300dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/group_17_ek3"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<View   android:id="@+id/ellipse_1_ek3"
										android:background="@drawable/ellipse_1_ek3_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:layout_width="92dp"
										android:layout_height="92dp" />

								</RelativeLayout>

								<View   android:id="@+id/rectangle_9_ek2"
									android:background="@drawable/rectangle_9_ek2_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="100dp"
									android:layout_width="90dp"
									android:layout_height="11dp" />

							</RelativeLayout>


							<RelativeLayout android:id="@+id/group_23"
								android:layout_marginTop="0dp"
								android:layout_marginStart="400dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/group_17_ek4"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<View   android:id="@+id/ellipse_1_ek4"
										android:background="@drawable/ellipse_1_ek4_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:layout_width="92dp"
										android:layout_height="92dp" />

									<View   android:id="@+id/line_3"
										android:background="@drawable/line_3_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="45dp"
										android:layout_width="90dp"
										android:layout_height="1dp" />

									<View   android:id="@+id/line_4"
										android:background="@drawable/line_4_shape"
										 android:layout_marginStart="0dp"
										android:layout_marginTop="45dp"
										android:layout_width="90dp"
										android:layout_height="1dp" />

								</RelativeLayout>

								<View   android:id="@+id/rectangle_9_ek3"
									android:background="@drawable/rectangle_9_ek3_shape"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="100dp"
									android:layout_width="90dp"
									android:layout_height="11dp" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<View   android:id="@+id/rectangle_10"
					android:background="@drawable/rectangle_10_shape"
					 android:layout_marginStart="10dp"
					android:layout_marginTop="94dp"
					android:layout_width="180dp"
					android:layout_height="18dp" />


				<RelativeLayout android:id="@+id/group_31"
					android:layout_marginTop="294dp"
					android:layout_marginStart="10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_17_ek5"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/rectangle_1_ek1"
							android:src="@drawable/rectangle_1_ek1"
							android:contentDescription="rectangle_1_ek1"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="140dp"
							android:layout_height="120dp" />

					</RelativeLayout>

				</RelativeLayout>

				<TextView android:id="@+id/leukokoria_ek1"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="24sp"
					android:textColor="@color/leukokoria_color"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="255dp"
					android:layout_width="159dp"
					android:layout_height="46dp"
					android:text="@string/leukokoria_ek1_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>